# sample_excel_crud

./: README.md  app.py  data.xlsx  pyproject.toml  test.http
